# aiTranslator

./: .gitignore  CLAUDE.md  LICENSE  README.md  analysis_options.yaml  flutter_log.txt  pubspec.yaml  test_stub_translation_fix.dart
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/aistudio/ai_translator/: MainActivity.kt
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: Main.storyboard
lib/: main.dart
lib/app/: router.dart  theme.dart
lib/features/conversation/models/: message.dart
lib/features/conversation/pages/: conversation_mode_page.dart  conversation_page.dart
lib/features/conversation/providers/: conversation_provider.dart
lib/features/conversation/widgets/: language_bar.dart  language_selector.dart
lib/features/model_manager/models/: model_info.dart
lib/features/model_manager/pages/: model_download_page.dart
lib/features/model_manager/providers/: model_manager_provider.dart
lib/native/: fasttext_bindings.dart  nllb_bindings.dart  whisper_bindings.dart
lib/services/: asr_service.dart  audio_service.dart  hymt_translator.dart  language_detect_service.dart  model_download_trigger.dart  nllb_onnx_translator.dart  translation_isolate.dart  translation_service.dart  tts_service.dart
lib/utils/: language_codes.dart
native/: AiFasttext.podspec  AiNllb.podspec  AiWhisper.podspec  CMakeLists.txt
native/bridge/: fasttext_bridge.c  fasttext_bridge.cpp  fasttext_bridge.h  nllb_bridge.c  nllb_bridge.cpp  nllb_bridge.h  whisper_bridge.c  whisper_bridge.cpp  whisper_bridge.h
scripts/: download_nllb_model.sh  download_whisper_model.sh  push_models_to_sim.sh
test/: widget_test.dart
